# UB_Gate

./: PengenalanPlat.py  howto.txt  plat.py  plat2.py  plat3.py  platUbuntu.py  rtsp.py  skew.py  tesTrained.py  tesseract.py
Train Tesseract/: .uuid  myfont.exp0.box  myfont.exp0.tif  myfont.exp0.tr  myfont.inttemp  myfont.normproto  myfont.pffmtable  myfont.traineddata  myfont.unicharset  unicharset
ocr_project/: CMakeLists.txt  main.cpp
